<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.user.SignupActivity">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:letterSpacing="0.05"
            android:text="@string/app_name"
            android:textColor="@color/color_4facfe"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/textInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/str_common_05"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textWebEmailAddress"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/black_cursor" />

        </com.google.android.material.textfield.TextInputLayout>


<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/cardView2"-->
<!--            android:layout_width="55dp"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_marginTop="6dp"-->
<!--            android:layout_marginEnd="24dp"-->
<!--            android:elevation="0dp"-->
<!--            app:cardElevation="0dp"-->
<!--            app:cardCornerRadius="6dp"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/til_email"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@+id/til_email">-->

<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                android:id="@+id/email_verify_background"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:background="@color/color_d3d3d3">-->

<!--                <ImageView-->
<!--                    android:id="@+id/iv_email_verify"-->
<!--                    android:layout_width="30dp"-->
<!--                    android:layout_height="30dp"-->
<!--                    android:src="@drawable/ic_check"-->
<!--                    app:tint="@color/white"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->


<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--        </androidx.cardview.widget.CardView>-->


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/textInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/str_common_03"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_email">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:maxLength="16"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/black_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_check"
            style="@style/textInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/str_common_06"
            app:layout_constraintEnd_toEndOf="@+id/til_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/til_password"
            app:layout_constraintTop_toBottomOf="@+id/til_password">

            <EditText
                android:id="@+id/et_password_check"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:maxLength="16"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/black_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:letterSpacing="0.2"
            android:stateListAnimator="@null"
            android:text="@string/str_common_01"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            app:backgroundTint="@color/color_d3d3d3"
            app:cornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="@+id/til_password"
            app:layout_constraintStart_toStartOf="@+id/til_password"
            app:layout_constraintTop_toBottomOf="@+id/til_password_check" />

            <include
                android:id="@+id/loading_view"
                layout="@layout/loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
