<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        <ScrollView-->
<!--            android:id="@+id/scrollView2"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".view.user.LoginActivity">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/slide_view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/clayout_login_form"
                    app:layout_constraintDimensionRatio="1:0.9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <View
                    android:id="@+id/viewFadingEdge"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/bg_fading_edge"
                    app:layout_constraintBottom_toBottomOf="@id/slide_view_pager" />

                <LinearLayout
                    android:id="@+id/layoutIndicators"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/slide_view_pager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:letterSpacing="0.05"
                    android:text="@string/app_name"
                    android:textColor="@color/color_4facfe"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/slide_view_pager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clayout_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/slide_view_pager">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_email"
                        style="@style/textInputLayoutStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:hint="@string/str_common_05"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconDrawable="@drawable/ic_email">

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:inputType="textWebEmailAddress"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@drawable/black_cursor" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_password"
                        style="@style/textInputLayoutStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/str_common_03"
                        app:layout_constraintEnd_toEndOf="@+id/til_email"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/til_email"
                        app:layout_constraintTop_toBottomOf="@+id/til_email"
                        app:passwordToggleEnabled="true"
                        app:startIconDrawable="@drawable/ic_lock">

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:inputType="textPassword"
                            android:maxLength="16"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@drawable/black_cursor" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_login"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="16dp"
                        android:letterSpacing="0.3"
                        android:stateListAnimator="@null"
                        android:text="@string/str_common_02"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        app:backgroundTint="@color/color_4facfe"
                        app:cornerRadius="6dp"
                        app:layout_constraintEnd_toEndOf="@+id/til_password"
                        app:layout_constraintStart_toStartOf="@+id/til_password"
                        app:layout_constraintTop_toBottomOf="@+id/til_password" />

                    <TextView
                        android:id="@+id/btn_signup"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="24dp"
                        android:gravity="center"
                        android:text="@string/str_common_01"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintEnd_toStartOf="@+id/btn_simple_signup"
                        app:layout_constraintStart_toStartOf="@+id/btn_login"
                        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="16dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/color_d3d3d3"
                        app:layout_constraintBottom_toBottomOf="@+id/btn_signup"
                        app:layout_constraintEnd_toStartOf="@+id/btn_simple_signup"
                        app:layout_constraintStart_toEndOf="@+id/btn_signup"
                        app:layout_constraintTop_toTopOf="@+id/btn_signup" />


                    <TextView
                        android:id="@+id/btn_simple_signup"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="24dp"
                        android:gravity="center"
                        android:text="@string/str_common_04"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="@+id/btn_signup"
                        app:layout_constraintEnd_toEndOf="@+id/btn_login"
                        app:layout_constraintStart_toEndOf="@+id/btn_signup"
                        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
<!--        </ScrollView>-->

        <include
            android:id="@+id/loading_view"
            layout="@layout/loading"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>